[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowdiff"
version = "0.1.0"
description = "Track documentation snapshots and inspect changes over time."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Knowledge Diff contributors" }
]
keywords = ["cli", "documentation", "diff", "tracking", "sqlite", "knowledge-management"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Documentation",
  "Topic :: Utilities",
]
dependencies = [
  "beautifulsoup4>=4.12.0",
  "httpx>=0.27.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/delllayne/Knowledge-Diff"
Repository = "https://github.com/delllayne/Knowledge-Diff"
Issues = "https://github.com/delllayne/Knowledge-Diff/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
knowdiff = "knowdiff.cli:app"

[tool.setuptools]
package-dir = {"" = "knowdiff"}

[tool.setuptools.packages.find]
where = ["knowdiff"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["knowdiff"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
files = ["knowdiff", "tests"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true
